--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "borge",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "author": "Rustam Yusupov",
   "license": "ISC",
   "main": "index.js",
@@ -10,7 +10,8 @@
   },
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "files": [
     "dist"
