--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "borge",
-  "version": "0.6.0",
+  "version": "0.6.1",
   "author": "Rustam Yusupov",
   "license": "ISC",
   "main": "index.js",
@@ -12,7 +12,7 @@
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
-    "brain-progression": "dist/bin/brain-gcd.js"
+    "brain-progression": "dist/bin/brain-progression.js"
   },
   "files": [
     "dist"
