--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "borge",
-  "version": "0.6.1",
+  "version": "0.7.0",
   "author": "Rustam Yusupov",
   "license": "ISC",
   "main": "index.js",
@@ -12,7 +12,8 @@
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
-    "brain-progression": "dist/bin/brain-progression.js"
+    "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js"
   },
   "files": [
     "dist"
