--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.7.0",
   "author": "Rustam Yusupov",
   "license": "ISC",
-  "main": "index.js",
+  "keywords": [
+    "brain",
+    "game"
+  ],
   "scripts": {
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublishOnly": "npm run build"
@@ -19,6 +22,9 @@
     "dist"
   ],
   "dependencies": {
+    "readline-sync": "^1.4.9"
+  },
+  "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
@@ -27,7 +33,6 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.17.2",
-    "readline-sync": "^1.4.9"
+    "eslint-plugin-import": "^2.17.2"
   }
 }
